--- a/index.html
+++ b/index.html
@@ -20,6 +20,25 @@ The left column should have the question, the right column should have your answ
 	</head>
 	
 	<body>
-
+	<table>
+		<tr>
+			<td>Name
+			</td>
+			<td>Brady
+			</td>
+		</tr>
+		<tr>
+			<td>Middle School
+			</td>
+			<td>Appling 
+			</td>
+		</tr>
+		<tr>
+			<td>Vacation
+			</td>
+			<td>Florida
+			</td>
+		</tr>
+	</table>
 	</body>
 </html>
